Update Web forms - MDN
I've changed:
- Basic native form controls

--- a/_mdn-study/_html-study/_texts-html-practicing/web-forms-practice.html
+++ b/_mdn-study/_html-study/_texts-html-practicing/web-forms-practice.html
@@ -414,7 +414,7 @@
         <p><strong>First form: </strong></p>
         <p>See what happen if you don't digit a valide email and try to send it.</p>
         <form class="example14" action="">
-            <h1>Email attribute</h1>
+            <h1>Email value</h1>
             <p>
                 <label for="email">Your email: <strong><abbr title="required" arial-label="required">*</abbr></strong></label>
                 <input id="email" type="email">
@@ -434,7 +434,56 @@
                 </ul>
             </fieldset>
         </form>
+        <p><strong>Second form:</strong></p>
+        <form class="example15">
+            <h1>Search value</h1>
+            <p>
+                <label for="search">Search: </label>
+                <input type="search" id="search" name="search">
+            </p>
+        </form>
+        <p><strong>Third form:</strong></p>
+        <form class="example16">
+            <h1>Telephone value</h1>
+            <ul>
+                <li>
+                    <label for="tel">Telephone: </label>
+                    <input type="tel" id="tel" name="tel">
+                </li>
+                <li>
+                    <button type="submit">Send now</button>
+                </li>
+            </ul>
+        </form>
+        <p><strong>Fourth form:</strong></p>
+        <form class="example17">
+            <h1>Url value</h1>
+            <fieldset>
+                <legend>Links of your social medias:</legend>
+                <ul>
+                    <li>
+                        <label for="url">LinkedIn: </label>
+                        <input type="url" id="url" name="linkedin">
+                    </li>
+                    <li>
+                        <label for="url">Instagram: </label>
+                        <input type="url" id="url" name="instagram">
+                    </li>
+                    <li>
+                        <label for="url">GitHub</label>
+                        <input type="url" id="url" name="github">
+                    </li>
+                </ul>
+                <p>
+                    <button type="submit">Send now</button>
+                    <button type="reset">Reset</button>
+                </p>
+            </fieldset>
+        </form>
         <h2>Abstract and useful informations</h2>
+        <ul>
+            <li></li>
+        </ul>
     </div>
 </body>
 </html>
